--- a/frontend/src/app/pages/osoblje/dodaj-obavjestenja/dodaj-obavjestenja.component.html
+++ b/frontend/src/app/pages/osoblje/dodaj-obavjestenja/dodaj-obavjestenja.component.html
@@ -4,7 +4,7 @@
   <input type="number" [(ngModel)]="obavestenje.godina" name="godina" placeholder="Godina">
   <input type="number" [(ngModel)]="obavestenje.mesec" name="mesec" placeholder="Mesec">
   <input type="number" [(ngModel)]="obavestenje.dan" name="dan" placeholder="Dan">
-  <input type="number" [(ngModel)]="obavestenje.fakultetId" name="fakultetID" placeholder="Fakultet ID">
+  <input type="number" [(ngModel)]="obavestenje.fakultetID" name="fakultetID" placeholder="Fakultet ID">
   <button type="submit">Pošalji</button>
 </form>
 
