--- a/frontend/src/app/pages/nastavnik/predmeti/predmet-detalji/predmet-detalji.component.html
+++ b/frontend/src/app/pages/nastavnik/predmeti/predmet-detalji/predmet-detalji.component.html
@@ -12,6 +12,7 @@
   <button (click)="idiNa('obavestenja')">Obaveštenja</button>
   <!-- <button (click)="idiNa('studenti')">Studenti</button> -->
   <button (click)="idiNa('ocene')">Unos ocena</button>
+  <button (click)="idiNa('kolokvijum')">Unos kolokvijuma bodova</button>
 </div>
 
 <div *ngIf="!predmet">
