--- a/frontend/src/app/pages/nastavnik/predmeti/predmet-detalji/predmet-detalji.component.css
+++ b/frontend/src/app/pages/nastavnik/predmeti/predmet-detalji/predmet-detalji.component.css
@@ -5,13 +5,14 @@
 button {
   margin: 0.5rem 10px;
   padding: 0.4rem 0.8rem;
-  background-color: #007bff;
-  color: white;
-  border: none;
+   background-color: rgba(255, 255, 255, 0.5); /* 0.5 = 50% providnosti */
+  border: 1px solid white;
+  color: black;
   border-radius: 4px;
   cursor: pointer;
+  
 }
 button:hover {
-  background-color: #0056b3;
+  background-color: white;
 }
 
