--- a/frontend/src/app/pages/nastavnik/predmeti/nastavnik-predmeti/nastavnik-predmeti.component.html
+++ b/frontend/src/app/pages/nastavnik/predmeti/nastavnik-predmeti/nastavnik-predmeti.component.html
@@ -1,5 +1,13 @@
-<div class="container">
-  <h2>Moji predmeti</h2>
+<div 
+  class="min-h-screen bg-cover bg-center bg-fixed flex flex-col items-center justify-center relative"
+  style="background-image: url('pozadina.jpg');"
+>
+  <!-- Grb u pozadini, iznad forme -->
+  <div class="absolute top-16 flex justify-center w-full pointer-events-none">
+    <img src="slika1.png" alt="Grb" class="w-48 h-auto opacity-30 drop-shadow-2xl">
+  </div>
+
+<div class="container font-bold mt-20 opacity-90 disabled:opacity-100 ">
 
   <div *ngIf="predmeti.length === 0">
     <p>Nema predmeta za prikaz.</p>
@@ -10,7 +18,7 @@
       <h3>{{ predmet.naziv }}</h3>
       <p><strong>ID:</strong> {{ predmet.id }}</p>
       <p><strong>ESPB:</strong> {{ predmet.espb }}</p>
-      <button [routerLink]="['/nastavnik/predmet', predmet.id]">Detalji</button>
+      <button class="px-3 py-1 border border-gray-400 rounded-md hover:border-blue-500 transition" [routerLink]="['/nastavnik/predmet', predmet.id]">Detalji</button>
     </li>
   </ul>
 </div>
