--- a/frontend/src/app/pages/prikazi-fakultet/prikazi-fakultet.component.html
+++ b/frontend/src/app/pages/prikazi-fakultet/prikazi-fakultet.component.html
@@ -1,20 +1,28 @@
-<div *ngIf="fakultet" class="max-w-3xl mx-auto my-8 p-6 bg-white shadow rounded">
-  <h2 class="text-2xl font-bold mb-2">{{ fakultet.naziv }}</h2>
-  <p class="text-gray-700">{{ fakultet.opis }}</p>
-  <p class="text-gray-700">Dekan: {{ fakultet.rektor.ime}}{{fakultet.rektor.prezime}},<br> {{fakultet.rektor.biografija}}</p>
-  <p class="text-gray-700">Adresa: {{ fakultet.adresa.ulica}},{{fakultet.adresa.broj}}:{{fakultet.adresa.grad}},{{fakultet.adresa.drzava}}</p>
-  <p class="text-gray-700">Kontakt info:{{ fakultet.kontakt}}</p>
-  <p class="text-gray-700">Email info:{{ fakultet.email}}</p>
-</div>
+<div 
+  class="min-h-screen bg-cover bg-center bg-fixed flex flex-col items-center justify-center relative"
+  style="background-image: url('pozadina.jpg');"
+>
+  <!-- Grb u pozadini, iznad forme -->
+  <div class="absolute top-16 flex justify-center w-full pointer-events-none">
+    <img src="slika1.png" alt="Grb" class="w-48 h-auto opacity-30 drop-shadow-2xl">
+  </div>
+  <div *ngIf="fakultet" class="relative z-10 w-full max-w-md p-6 mt-60 bg-white/70 border border-white/50 rounded-2xl shadow-xl backdrop-blur-md">
+      <h2 class="text-2xl font-bold mb-2">{{ fakultet.naziv }}</h2>
+      <p class="text-gray-700">{{ fakultet.opis }}</p>
+      <p class="text-gray-700">Dekan: {{ fakultet.rektor.ime}}{{fakultet.rektor.prezime}},<br> {{fakultet.rektor.biografija}}</p>
+      <p class="text-gray-700">Adresa: {{ fakultet.adresa.ulica}},{{fakultet.adresa.broj}}:{{fakultet.adresa.grad}},{{fakultet.adresa.drzava}}</p>
+      <p class="text-gray-700">Kontakt info:{{ fakultet.kontakt}}</p>
+      <p class="text-gray-700">Email info:{{ fakultet.email}}</p>
+    </div>
 
-<div class="max-w-3xl mx-auto mt-10">
+<div class="relative z-10 w-full max-w-md p-6 mt-5 bg-white/70 border border-white/50 rounded-2xl shadow-xl backdrop-blur-md">
   <h3 class="text-xl font-semibold mb-4">Studijski programi</h3>
 
   <div *ngIf="programe.length > 0; else noPrograme" class="space-y-4">
     <div
       *ngFor="let program of programe"
       (click)="router.navigate(['/prikazi-program', program.id])"
-      class="p-4 bg-gray-50 rounded shadow hover:shadow-lg cursor-pointer transition duration-200 hover:bg-green-50"
+      class="p-4 bg-gray-50 rounded shadow hover:shadow-lg cursor-pointer transition duration-200 hover:bg-black-50"
     >
       <h4 class="text-lg font-medium text-green-700">{{ program.naziv }}</h4>
       <div *ngIf="authService.hasRole('ROLE_ADMIN')" class="flex gap-4 mt-4">
