--- a/frontend/src/app/pages/prikazi-program/prikazi-program.component.html
+++ b/frontend/src/app/pages/prikazi-program/prikazi-program.component.html
@@ -1,10 +1,19 @@
-<div *ngIf="program" class="max-w-3xl mx-auto my-8 p-6 bg-white shadow rounded">
+<div 
+  class="min-h-screen bg-cover bg-center bg-fixed flex flex-col items-center justify-center relative"
+  style="background-image: url('pozadina.jpg');"
+>
+  <!-- Grb u pozadini, iznad forme -->
+  <div class="absolute top-16 flex justify-center w-full pointer-events-none">
+    <img src="slika1.png" alt="Grb" class="w-48 h-auto opacity-30 drop-shadow-2xl">
+  </div>
+
+<div *ngIf="program" class="relative z-10 w-full max-w-md p-6 mt-55 bg-white/70 border border-white/50 rounded-2xl shadow-xl backdrop-blur-md">
   <h2 class="text-2xl font-bold mb-2">{{ program.naziv }}</h2>
   <p class="text-gray-700">{{ program.opis }}</p>
   <p class="text-gray-700">Dekan: {{ program.rukovodioc.ime}}{{program.rukovodioc.prezime}},<br> {{program.rukovodioc.biografija}}</p>
 </div>
 
-<div class="max-w-3xl mx-auto mt-10">
+<div class="relative z-10 w-full max-w-md p-6 mt-2 bg-white/70 border border-white/50 rounded-2xl shadow-xl backdrop-blur-md">
   <h3 class="text-xl font-semibold mb-4">Predmeti</h3>
 
   <div *ngIf="predmeti.length > 0; else noPredmeti" class="space-y-4">
