--- a/frontend/src/app/pages/univerzitet/univerzitet.component.html
+++ b/frontend/src/app/pages/univerzitet/univerzitet.component.html
@@ -1,5 +1,13 @@
+<div 
+  class="min-h-screen bg-cover bg-center bg-fixed flex flex-col items-center justify-center relative"
+  style="background-image: url('pozadina.jpg');"
+>
+  <!-- Grb u pozadini, iznad forme -->
+  <div class="absolute top-16 flex justify-center w-full pointer-events-none">
+    <img src="slika1.png" alt="Grb" class="w-48 h-auto opacity-30 drop-shadow-2xl">
+  </div>
 <div class="max-w-4xl mx-auto my-10 p-4">
-  <h2 class="text-2xl font-bold mb-6 text-center">Univerziteti</h2>
+  
 
   <div *ngIf="univerziteti.length > 0; else noData" class="space-y-4">
     <div
